--- a/apps/website/mfe/src/app/components/how-it-works/how-it-works.component.html
+++ b/apps/website/mfe/src/app/components/how-it-works/how-it-works.component.html
@@ -1,7 +1,7 @@
 <div
     class="text-light-900 flex flex-col my-8 gap-y-8 items-start lg:items-center bg-[url('assets/images/bg/how-clutter-works.jpg')] bg-no-repeat bg-center  bg-dark-900/55 bg-blend-multiply rounded-lg p-8">
     <div class="font-semibold text-2xl lg:text-4xl">{{'HOW_IT_WORKS.TITLE' | translate}}</div>
-    <div class="lg:max-w-xl text-center mx-auto text-md lg:text-lg">{{'HOW_IT_WORKS.DESCRIPTION' | translate}}</div>
+    <div class="lg:max-w-xl lg:text-center mx-auto text-md lg:text-lg">{{'HOW_IT_WORKS.DESCRIPTION' | translate}}</div>
     <div class="flex flex-col md:flex-row items-start justify-start md:justify-center md:items-center gap-x-6 gap-y-8">
         <a type="button"
             class="inline-flex items-center font-medium justify-center px-4 py-4 text-sm bg-primary-900 text-light-900  rounded-lg cursor-pointer hover:bg-primary-600"
