--- a/apps/website/mfe/src/app/pages/about-us/sections/our-mision/our-mision.component.html
+++ b/apps/website/mfe/src/app/pages/about-us/sections/our-mision/our-mision.component.html
@@ -1,15 +1,14 @@
 <div class="relative flex justify-center mb-4 lg:mb-12">
-    <div class="text-hollow bg-gradient-to-r from-primary-900 to-prmary-600 ">Our Mision</div>
+    <div class="text-hollow text-nowrap	 bg-gradient-to-r from-primary-900 to-prmary-600 ">Our Mision</div>
     <div class="absolute top-1/2 flex flex-col items-center">
         <div class="text-primary-900  text-center font-medium text-2xl lg:text-5xl">Our Mision</div>
         <img loading="lazy" src="assets/images/mision.png" alt="our organizing Mision">
-        <div class="font-medium text-dark-900 text-sm lg:text-lg">“ Create organized and functional spaces that
-            simplify
-            life"
+        <div class="font-medium text-dark-900 text-sm md:text-lg">1 Corithians 14:40 "Let everything be done decently
+            and in an orderly manner"
         </div>
     </div>
 </div>
-<div class="flex justify-center">
+<div class="flex justify-center mb-2">
     <div
         class="-mr-2 p-4 h-44 w-44 border border-primary-300 bg-gradient-to-t from-primary-300 to-prmary-600 rounded-full flex items-center justify-center">
         <div class="text-center font-medium text-dark-900 text-xs leading-5 mr-2">
@@ -32,7 +31,7 @@
         <div class="bg-primary-900 w-2.5 h-60"></div>
         <div>
             <div class="text-dark-900 font-semibold 2xl lg:text-4xl mb-4 lg:mb-6">Our goals</div>
-            <div class="font-medium text-dark-900 text-sm lg:text-lg">Our mission centers around empowering
+            <div class="font-medium text-dark-900 text-sm md:text-lg">Our mission centers around empowering
                 individuals and
                 families to create calm, organized spaces that enhance their productivity and well-being
                 through
