--- a/apps/website/mfe/src/app/pages/about-us/sections/our-vision/our-vision.component.html
+++ b/apps/website/mfe/src/app/pages/about-us/sections/our-vision/our-vision.component.html
@@ -3,7 +3,7 @@
     <div class="absolute top-1/2 flex flex-col items-center">
         <div class="text-primary-900  text-center font-medium text-2xl lg:text-5xl">Our Vision</div>
         <img loading="lazy" src="assets/images/vision.png" alt="our organizing vision">
-        <div class="font-medium text-dark-900 text-sm lg:text-lg">“ Create organized and functional spaces that
+        <div class="font-medium text-dark-900 text-sm md:text-lg">“Create organized and functional spaces that
             simplify
             life"
         </div>
@@ -11,10 +11,10 @@
 </div>
 <div class="flex items-center ">
     <div class="w-full lg:w-7/12 flex items-start gap-x-4">
-        <div class="bg-primary-900 w-1.5 h-60"></div>
+        <div class="bg-primary-900 w-1.5 h-44 md:h-60"></div>
         <div>
-            <div class="text-dark-900 font-semibold 2xl lg:text-4xl mb-4 lg:mb-6">Our Vision</div>
-            <div class="font-medium text-dark-900 text-sm lg:text-lg">To be the leading professional organizers,
+            <div class="text-dark-900 font-semibold text-sm md:text-lg mb-4 lg:mb-6">Our Vision</div>
+            <div class="font-medium text-dark-900 text-sm md:text-lg">To be the leading professional organizers,
                 empowering
                 individuals and families to create calm, functional spaces that ignite productivity and and simplify
                 their daily lives.</div>
