--- a/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-material/sections/tab/tab.component.html
+++ b/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-material/sections/tab/tab.component.html
@@ -16,7 +16,7 @@
 <div id="default-tab-content">
     <div class="hidden p-4 rounded-lg bg-primary-100" id="Pros" role="tabpanel" aria-labelledby="Pros-tab">
         <ul class="max-w-md space-y-1 text-dark-600 list-inside">
-            <li class="flex items-center" *ngFor="let pro of tabs?.pros.items">
+            <li class="flex items-center text-xs lg:text-base" *ngFor="let pro of tabs?.pros.items">
                 <svg class="w-3.5 h-3.5 me-2 text-primary-600 flex-shrink-0" aria-hidden="true"
                     xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
                     <path
@@ -28,7 +28,7 @@
     </div>
     <div class="hidden p-4 rounded-lg bg-danger-100" id="Cons" role="tabpanel" aria-labelledby="Cons-tab">
         <ul class="max-w-md space-y-1 text-dark-600 list-inside">
-            <li class="flex items-center" *ngFor="let cons of tabs?.cons.items">
+            <li class="flex items-center text-xs lg:text-base" *ngFor="let cons of tabs?.cons.items">
                 <svg class="w-3.5 h-3.5 me-2 text-danger-600 flex-shrink-0" aria-hidden="true"
                     xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
                     <path fill-rule="evenodd"
