--- a/apps/website/mfe/src/app/pages/about-us/about-us.component.html
+++ b/apps/website/mfe/src/app/pages/about-us/about-us.component.html
@@ -1,6 +1,6 @@
-<main role="main" class="flex flex-col max-w-screen-xl mx-auto gap-y-6">
+<main role="main" class="flex flex-col max-w-screen-xl mx-auto gap-y-6 px-4 lg:px-0 mt-8 lg:mt-0">
     <about-hero-section class="z-20"></about-hero-section>
-    <about-who-is-section class="z-10 -mt-24"></about-who-is-section>
+    <about-who-is-section class="z-10 lg:-mt-24"></about-who-is-section>
     <about-our-vision></about-our-vision>
     <about-our-mision></about-our-mision>
     <wc-how-it-works></wc-how-it-works>
