--- a/apps/website/mfe/src/app/pages/about-us/sections/hero-section/hero-section.component.html
+++ b/apps/website/mfe/src/app/pages/about-us/sections/hero-section/hero-section.component.html
@@ -1,11 +1,11 @@
-<div class="flex items-center">
-    <div class="w-full lg:w-5/12" style="margin-bottom: 24px;">
-        <div class="!leading-extra-loose text-2xl lg:text-6xl font-extrabold text-primary-900">
+<div class="flex flex-col lg:flex-row items-center">
+    <div class="w-full lg:w-5/12">
+        <div class=" !leading-extra-loose text-3xl md:text-5xl lg:text-6xl font-extrabold text-primary-900">
             {{'ABOUT_US_PAGE.HERO_SECTION.TITLE' |
             translate}}</div>
-        <div class="mb-2 text-dark-600">{{'ABOUT_US_PAGE.HERO_SECTION.DESCRIPTION'| translate}}
+        <div class="mb-2 text-dark-600 text-sm md:text-lg">{{'ABOUT_US_PAGE.HERO_SECTION.DESCRIPTION'| translate}}
         </div>
-        <div class="flex flex-col md:flex-row items-center gap-4">
+        <div class="flex  items-center gap-4">
             <a type="button"
                 class="inline-flex items-center font-medium justify-center px-4 py-4 text-sm bg-primary-900 text-light-900 dark:text-light-900 rounded-lg cursor-pointer hover:bg-dark-900"
                 ng-reflect-router-link="instant-quote" href="/instant-quote">{{
@@ -17,7 +17,8 @@
                 translate }}</a>
         </div>
     </div>
-    <div class="w-full lg:w-7/12">
-        <img loading="lazy" src="/assets/images/bg/about-us.png" [alt]="'ABOUT_US_PAGE.HERO_SECTION.TITLE' | translate">
+    <div class="hidden lg:block lg:w-7/12">
+        <img loading="lazy" src="/assets/images/bg/about-us.png" [alt]="'ABOUT_US_PAGE.HERO_SECTION.TITLE' | translate"
+            class="object-cover">
     </div>
 </div>
