--- a/apps/website/mfe/src/app/pages/about-us/sections/who-is-section/who-is-section.component.html
+++ b/apps/website/mfe/src/app/pages/about-us/sections/who-is-section/who-is-section.component.html
@@ -1,5 +1,5 @@
-<div class="flex items-end p-0 m-0">
-    <div class="w-full lg:w-1/2">
+<div class="flex flex-col md:flex-row items-end p-0 m-0">
+    <div class="w-full md:w-1/2">
         <div>
             <img loading=" lazy" src="/assets/images/shapes.svg" alt="home organizing boxes" />
         </div>
@@ -9,16 +9,16 @@
                 <div class="font-semibold text-2xl lg:text-4xl mt-2 lg:mt-6">{{'ABOUT_US_PAGE.WHO_IS_SECTION.TITLE'|
                     translate}}
                 </div>
-                <div class="text-sm lg:text-lg text-dark-600">{{'ABOUT_US_PAGE.WHO_IS_SECTION.DESCRIPTION_1'|
+                <div class="text-sm md:text-lg text-dark-600">{{'ABOUT_US_PAGE.WHO_IS_SECTION.DESCRIPTION_1'|
                     translate}}
                 </div>
-                <div class="text-sm lg:text-lg text-dark-600">
+                <div class="text-sm md:text-lg text-dark-600">
                     {{'ABOUT_US_PAGE.WHO_IS_SECTION.DESCRIPTION_2'|
                     translate}}
                 </div>
                 <div>
                     <a type="button"
-                        class="inline-flex items-center font-medium justify-center px-4 py-4 text-sm bg-primary-900 text-light-900 dark:text-light-900 rounded-lg cursor-pointer hover:bg-dark-900"
+                        class="inline-flex items-center font-medium justify-center px-4 py-4 text-sm lg:text-lg bg-primary-900 text-light-900 dark:text-light-900 rounded-lg cursor-pointer hover:bg-dark-900"
                         ng-reflect-router-link="instant-quote" [routerLink]="'/how-it-works'">{{
                         'ABOUT_US_PAGE.WHO_IS_SECTION.BUTTON' | translate
                         }}</a>
@@ -26,21 +26,23 @@
             </div>
         </div>
     </div>
-    <div id="default-carousel" class="relative w-full lg:w-1/2" data-carousel="slide">
-        <div class="relative flex flex-colh-56 overflow-hidden rounded-lg md:h-96 lg:h-128 ">
+    <div id="default-carousel" class="relative w-full md:w-1/2" data-carousel="slide">
+        <div class="relative flex flex-col  overflow-hidden rounded-lg h-128 ">
             <div *ngFor="let item of carousel" [class.hidden]="!item.active"
-                class="flex flex-wrap flex-end gap-4 duration-700 ease-in-out z-20" data-carousel-item>
+                class="hidden w-full flex flex-wrap flex-end gap-4 duration-700 ease-in-out z-20" data-carousel-item>
                 <img *ngFor="let img of item.images; first as isFirst; last as isLast" [src]=" img.image"
                     class="rounded-lg" [alt]="img.label" [class.h-60]="!isLast && !isFirst"
-                    [class.w-40-p]="!isLast && !isFirst" [class.h-40]="isLast  || isFirst"
-                    [class.w-40]="isLast || isFirst" [class.self-end]="isFirst">
+                    [class.w-44-p]="!isLast && !isFirst" [class.h-44]="isLast  || isFirst"
+                    [class.w-44]="isLast || isFirst" [class.self-end]="isFirst">
             </div>
-            <div class="carousel-indicators absolute z-30 flex flex-col top-1/3 left-3/4 space-y-3">
+            <div
+                class="carousel-indicators absolute z-30 flex flex-col top-1/3  left-96 md:left-[23rem] lg:left-3/4 space-y-3">
                 <button class="w-3 h-3 rounded-full bg-dark-100 " *ngFor="let item of carousel; index as slide"
                     type="button" [attr.data-bs-slide-to]="slide" [class.bg-primary-900]="item.active"
                     [attr.aria-current]="item.active" [attr.aria-label]="'Slide '+(slide+1)">
                 </button>
             </div>
+
         </div>
     </div>
 </div>
