--- a/apps/website/mfe/src/app/pages/home-page/sections/faq-section/faq-section.component.html
+++ b/apps/website/mfe/src/app/pages/home-page/sections/faq-section/faq-section.component.html
@@ -1,4 +1,4 @@
-<div class="font-semibold text-2xl lg:text-4xl text-center mb-5">
+<div class="text-center text-3xl font-extrabold text-dark-900 lg:text-5xl">
   {{ 'FAQ.TITLE' | translate }}
 </div>
 <div id="accordion-flush" data-accordion="flush" data-accordion="collapse"
@@ -14,7 +14,7 @@
             <path fill-rule="evenodd"
               d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 00-.867.5 1 1 0 11-1.731-1A3 3 0 0113 8a3.001 3.001 0 01-2 2.83V11a1 1 0 11-2 0v-1a1 1 0 011-1 1 1 0 100-2zm0 8a1 1 0 100-2 1 1 0 000 2z"
               clip-rule="evenodd"></path>
-          </svg> {{ question.question | translate }}</span>
+          </svg> <span class="text-start">{{ question.question | translate }}</span></span>
         <svg data-accordion-icon class="w-3 h-3 rotate-180 shrink-0" aria-hidden="true"
           xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
           <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
