--- a/apps/website/mfe/src/app/pages/home-page/sections/hero/hero.component.html
+++ b/apps/website/mfe/src/app/pages/home-page/sections/hero/hero.component.html
@@ -1,17 +1,17 @@
-<div class="grid grid-cols-1 md:grid-cols-2 gap-4 p-2 items-center">
+<div class="grid grid-cols-1 lg:grid-cols-2 gap-4 p-2 items-center">
   <div class="flex flex-col gap-6">
-    <div class="mb-4 text-3xl font-extrabold text-dark-900 dark:text-white md:text-5xl lg:text-6xl">{{
-      'HOME_PAGE.HERO_SECTION.TITLE' | translate }}<br>
+    <div class=" text-4xl font-extrabold text-dark-900  md:text-5xl lg:text-6xl">{{
+      'HOME_PAGE.HERO_SECTION.TITLE' | translate }}
       <span class="text-transparent bg-clip-text bg-gradient-to-r to-secondary-900 from-primary-900">{{
         'HOME_PAGE.HERO_SECTION.GRADIENT' | translate }}</span>
     </div>
-    <div class="text-lg font-normal text-dark-900 lg:text-xl dark:text-dark-300"> {{
-      'HOME_PAGE.HERO_SECTION.DESCRIPTION' | translate }} <strong class="font-semibold text-dark-900 dark:text-white">{{
+    <div class="text-lg font-normal text-dark-900 lg:text-xl"> {{
+      'HOME_PAGE.HERO_SECTION.DESCRIPTION' | translate }} <strong class="font-semibold text-dark-900 ">{{
         'HOME_PAGE.HERO_SECTION.EMPHASIS' | translate }}</strong> </div>
     <div>
-      <ul class="grid grid-cols-1 md:grid-cols-2  text-gray-500 list-inside dark:text-dark-300">
+      <ul class="grid grid-cols-1 lg:grid-cols-2  text-gray-500 list-inside">
         <li class="flex items-center mb-4" *ngFor="let item of [1, 2, 3, 4]">
-          <svg class="w-5 h-5 me-2 text-secondary-900 dark:text-secondary-300 flex-shrink-0" aria-hidden="true"
+          <svg class="w-5 h-5 me-2 text-secondary-900 flex-shrink-0" aria-hidden="true"
             xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
             <path
               d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z" />
@@ -22,8 +22,8 @@
         </li>
       </ul>
     </div>
-    <div class="grid grid-cols-2 gap-4 items-center">
-      <a class="cursor-pointer focus:outline-none text-white text-center bg-primary-900 hover:bg-dark-900 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 "
+    <div class="flex gap-4 items-center">
+      <a class="inline-flex items-center font-medium justify-center px-3 lg:px-4 py-4 text-xs lg:text-sm text-center bg-primary-900 text-light-900 rounded-lg cursor-pointer hover:bg-dark-900"
         type="button" [routerLink]="['/instant-quote']">{{
         'HOME_PAGE.HERO_SECTION.BUTTON_1' | translate
         }}</a>
@@ -33,32 +33,32 @@
         }}</a>
     </div>
   </div>
-  <div class="max-h-80 md:max-h-128 overflow-hidden">
+  <div class="max-h-80 lg:max-h-128 overflow-hidden">
     <wc-hero-slider></wc-hero-slider>
   </div>
 </div>
-<div class="p-4 bg-white rounded-lg md:p-8 dark:bg-dark-600" id="stats">
+<div class="p-4 bg-white rounded-lg lg:p-8" id="stats">
   <dl
-    class="md:divide-x bg-purple  divide-dark-100 dark:divide-dark-300 grid grid-cols-1 gap-4 md:gap-0 p-4 mx-auto text-gray-900 sm:grid-cols-1 md:grid-cols-5 sm:p-8">
+    class="lg:divide-x bg-purple  divide-dark-100 grid grid-cols-1 gap-4 lg:gap-0 p-4 mx-auto text-gray-900 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-5 sm:p-8">
     <div class="flex flex-col items-center justify-center ">
-      <dt class="mb-2 text-3xl md:text-6xl font-extrabold text-primary-900 ">+3</dt>
-      <dd class="text-dark-900 dark:text-gray-400">Organized Spaces</dd>
+      <dt class="mb-2 text-3xl lg:text-6xl font-extrabold text-primary-900 ">+3</dt>
+      <dd class="text-dark-900 ">Organized Spaces</dd>
     </div>
     <div class="flex flex-col items-center justify-center">
-      <dt class="mb-2 text-3xl md:text-6xl font-extrabold text-primary-900">+79</dt>
-      <dd class="text-dark-900 dark:text-gray-400">Instagram Community</dd>
+      <dt class="mb-2 text-3xl lg:text-6xl font-extrabold text-primary-900">+79</dt>
+      <dd class="text-dark-900 ">Instagram Community</dd>
     </div>
     <div class="flex flex-col items-center justify-center">
-      <dt class="mb-2 text-3xl md:text-6xl font-extrabold text-primary-900">+7</dt>
-      <dd class="text-dark-900 dark:text-gray-400">Facebook Community</dd>
+      <dt class="mb-2 text-3xl lg:text-6xl font-extrabold text-primary-900">+7</dt>
+      <dd class="text-dark-900 ">Facebook Community</dd>
     </div>
     <div class="flex flex-col items-center justify-center">
-      <dt class="mb-2 text-3xl md:text-6xl font-extrabold text-primary-900">+720</dt>
-      <dd class="text-dark-900 dark:text-gray-400">TikTok Community</dd>
+      <dt class="mb-2 text-3xl lg:text-6xl font-extrabold text-primary-900">+720</dt>
+      <dd class="text-dark-900 ">TikTok Community</dd>
     </div>
     <div class="flex flex-col items-center justify-center">
-      <dt class="mb-2 text-3xl md:text-6xl font-extrabold text-primary-900">+18</dt>
-      <dd class="text-dark-900 dark:text-gray-400">YouTube Community</dd>
+      <dt class="mb-2 text-3xl lg:text-6xl font-extrabold text-primary-900">+18</dt>
+      <dd class="text-dark-900 ">YouTube Community</dd>
     </div>
   </dl>
 </div>
