--- a/apps/website/mfe/src/app/pages/home-page/sections/the-process/the-process.component.html
+++ b/apps/website/mfe/src/app/pages/home-page/sections/the-process/the-process.component.html
@@ -1,6 +1,6 @@
 <section class="max-w-screen-xl  mx-auto">
   <div>
-    <div class="my-4 text-center text-3xl font-extrabold text-dark-900 lg:text-5xl">
+    <div class="my-4 text-center font-extrabold text-dark-900 text-3xl md:text-4xl lg:text-5xl">
       {{ 'HOME_PAGE.THE_PROCESS.TITLE' | translate }}
     </div>
     <div class="text-dark-600 text-center  mb-4 md:mb-9">
@@ -10,12 +10,12 @@
   <div class="relative p-4">
     <div class="z-20 relative overflow-hidden">
       <hr
-        class="hidden md:block absolute w-full my-6 border-dark-100 sm:mx-auto z-10 md:translate-x-24 md:top-20 z-20 " />
-      <div class="grid md:grid-cols-4 relative w-full z-20 mb-6 md:mb-12">
+        class="hidden md:block absolute w-full my-6 border-secondary-100 sm:mx-auto z-10 md:translate-x-24 md:top-40 z-20 " />
+      <div class="grid md:grid-cols-4 relative w-full z-20 mb-6 md:mb-12 gap-4 lg:gap-0">
         <ng-container *ngFor="let process of processes">
           <div class="flex justify-center items-center flex-col ">
             <img loading="lazy" [src]="'assets/images/' + process.image" [alt]="process.description | translate"
-              class="mb-3 h-20 w-25" />
+              class="mb-3 h-30 w-30 lg:h-40 lg:w-45" />
             <div class="flex flex-col items-center">
               <div
                 class="font-bold rounded-full bg-primary-900 w-8 h-8 flex items-center justify-center mb-2 text-light-900">
@@ -55,7 +55,7 @@
           </div>
           <div class="flex flex-col items-start">
             <a (click)="bookACall()"
-              class="cursor-pointer focus:outline-none text-white text-center bg-primary-900 hover:bg-dark-900 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 "
+              class=" inline-flex items-center font-medium justify-center text-sm px-4 py-4 cursor-pointer focus:outline-none text-white text-center bg-primary-900 hover:bg-dark-900 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg mb-2 "
               type="button">
               {{ 'HOME_PAGE.THE_PROCESS.BUTTON' | translate}}</a>
             <span class="flex items-center">
