--- a/apps/website/mfe/src/app/pages/home-page/sections/why-cff/why-cff.component.html
+++ b/apps/website/mfe/src/app/pages/home-page/sections/why-cff/why-cff.component.html
@@ -4,7 +4,7 @@
       <img loading="lazy" src="/assets/images/shapes.svg" alt="" width="200" />
     </div>
     <div class="">
-      <div class="my-4 text-3xl font-extrabold text-dark-900 lg:text-5xl">
+      <div class="my-4 font-extrabold text-dark-900 text-3xl md:text-4xl lg:text-5xl">
         {{ 'HOME_PAGE.WHY_CFF.TITLE' | translate }}
         <span class="text-transparent bg-clip-text bg-gradient-to-r to-secondary-900 from-primary-900">{{
           'HOME_PAGE.WHY_CFF.GRADIENT' | translate
@@ -13,7 +13,7 @@
       <div class="text-dark-600 mb-4 md:mb-9">
         {{ 'HOME_PAGE.WHY_CFF.DESCRIPTION' | translate }}
       </div>
-      <div class="flex flex-col md:flex-row items-center gap-4">
+      <div class="flex flex-col items-start md:flex-row lg:items-center gap-2 lg:gap-4">
         <a [routerLink]="['instant-quote']"
           class="inline-flex items-center font-medium justify-center px-4 py-4 text-sm bg-primary-900 text-light-900 dark:text-light-900 rounded-lg cursor-pointer hover:bg-dark-900"
           type="button">{{
