--- a/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-calendar/quote-calendar.component.html
+++ b/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-calendar/quote-calendar.component.html
@@ -1,28 +1,20 @@
 <div class=" flex flex-wrap justify-center mx-auto">
+    <div class="w-full my-3 lg:my-5">
+        <blockquote class="text-sm text-center font-light text-gray-900 mt-2">
+            <p>"Your home should be the antidote of stress, not the cause of it"<span class="text-xs italic">~Peter
+                    Walsh</span></p>
+        </blockquote>
+    </div>
     <div class="flex  flex-col sm:flex-row items-center justify-center gap-x-8 w-full mx-auto p-2 lg:py-4">
-        <!-- <div class="calendar-container">
-                <div class="calendar-card">
-                    <div class="check-availability d-flex">
-                        <div class="me-2 ">
-                            Checking availability
-                        </div>
-                        <img loading="lazy" src="assets/icons/loading-loop.svg" alt="">
-                    </div>
-                    <mat-card class="inline-calendar-card">
-                        <mat-calendar [minDate]="minDate" (selectedChange)="onDatePicked($event)"
-                            [selected]="selectedDate" ngDefaultControl [(ngModel)]="selectedDate"
-                            [ngModelOptions]="{standalone: true}"></mat-calendar>
-                    </mat-card>
-                </div>
-            </div> -->
         <div class=" flex flex-col items-start ">
-            <div id="dateField" #dateField inline-datepicker datepicker-buttons data-date=dataDate
-                (changeDate)="onDatePicked($event)" class="mx-auto sm:mx-0 ">
+            <div id="dateField" #dateField inline-datepicker datepicker-buttons (changeDate)="onDatePicked($event)"
+                class="mx-auto sm:mx-0 ">
             </div>
-            {{dataDate}}
         </div>
-        <div class="  flex flex-col items-start justify-center">
-            <ul id="timetable" class="grid w-full grid-cols-2 gap-x-4 gap-y-2 ">
+        <div class="flex flex-col items-start justify-center">
+            <h3 class="text-primary-900  text-base font-medium my-3 text-center"> {{dataDate | date:
+                'mediumDate'}}</h3>
+            <ul id="timetable" class="grid w-full grid-cols-2 gap-x-8 gap-y-2 mx-auto ">
                 <li *ngFor="let time of timePicker; index as i" class="w-40">
                     <input type="radio" [id]="'radio-time-btn-'+i" [value]="time.value" [(ngModel)]="selectedTime"
                         (ngModelChange)="onTimePicked($event)" [ngModelOptions]=" {standalone: true} "
@@ -34,44 +26,5 @@
                 </li>
             </ul>
         </div>
-        <!-- <div class="w-full lg:w-5/12  flex flex-col items-start md:items-center"
-            [class]="selectedDate ? 'show-time-picker' : 'hide-time-picker'">
-            <div class="d-flex align-items-start justify-content-between w-100">
-                <div class="d-flex justify-content-center flex-grow-1 ">
-                    <div class="date-time-header">
-                        2. Pick a time
-                    </div>
-                </div>
-                <div [class.circle-check-green-30]="selectedTime" class="justify-self-end">
-                    <img loading="lazy" class="check" [class.d-flex]="selectedTime" alt="clutter free finds services"
-                        src="/assets/icons/check-green.svg" width="10" />
-                </div>
-            </div>
-            <div *ngIf="!selectedDate" class=" h-100 d-flex justify-content-center align-items-center  py-5">
-                <img loading="lazy" class="img-fluid" src="/assets/images/time-picker.png" alt="" width="600">
-            </div>
-            <div *ngIf="selectedDate">
-                <div class="date-time-frame mt-4">
-                    <div class="date-time-item " *ngFor="let time of timePicker; index as i">
-                        <input (ngModelChange)="onTimePicked(time.value)" type="radio" name="time"
-                            [id]="'radio-time-btn-'+i" [value]="time" [(ngModel)]="selectedTime"
-                            [ngModelOptions]="{standalone: true} " />
-                        <label [style.pointerEvents]=" !selectedDate ? 'none' : 'auto'" [for]="'radio-time-btn-' +i"
-                            class="date-time-item">
-
-                            <div class="text">
-                                {{time.label}}
-                            </div>
-                        </label>
-                    </div>
-                </div>
-            </div>
-        </div> -->
-    </div>
-    <div class="w-full my-3 lg:my-5">
-        <blockquote class="text-sm text-center font-light text-gray-900 dark:text-white mt-2">
-            <p>"Your home should be the antidote of stress, not the cause of it"<span class="text-xs italic">~Peter
-                    Walsh</span></p>
-        </blockquote>
     </div>
 </div>
