--- a/apps/website/mfe/src/app/pages/privacy-policy/sections/content-section/content-section.component.html
+++ b/apps/website/mfe/src/app/pages/privacy-policy/sections/content-section/content-section.component.html
@@ -1,12 +1,12 @@
 <div class="flex flex-col px-4 max-w-screen-lg mx-auto">
     <div *ngFor="let content of contentArray;">
-        <div class="mt-2 text-2xl font-extrabold leading-none tracking-tight text-dark-900  lg:text-4xl">
+        <div class="mt-2 text-3xl font-extrabold leading-none tracking-tight text-dark-900  lg:text-4xl">
             {{ content.title| translate }}
         </div>
         <div class="text-dark-600   leading-7">
             {{ content.description_1 | translate }}
         </div>
-        <div class="leading-7 ">
+        <div class="leading-7 text-lg my-3">
             <ul class="max-w-md space-y-1 text-dark-600  list-disc list-inside">
                 <li *ngFor="let bullet of content.list1;">
                     {{ bullet | translate }}
