--- a/libs/shared/header/src/lib/header/header.component.html
+++ b/libs/shared/header/src/lib/header/header.component.html
@@ -1,11 +1,15 @@
-<nav class="bg-light border-dark-100 pt-16">
-  <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl p-4">
+<header class="sticky top-0 z-40 flex-none w-full mx-auto bg-light-900">
+  <div id="sticky-banner" tabindex="-1"
+    class="z-50 flex justify-center w-full p-4 border-b border-primary-300 bg-primary-900 px-4 py-3 lg:py-4">
+    <cff-app-banner></cff-app-banner>
+  </div>
+  <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl px-4 pt-6 lg:py-4">
     <a [routerLink]="'/'" class="flex items-center space-x-3 rtl:space-x-reverse">
       <img loading="lazy" src="/assets/images/logo.svg" class="h-10" alt="Clutter Free Finds Logo" />
     </a>
     <div class="flex items-center md:order-2 space-x-1 md:space-x-0 rtl:space-x-reverse">
-      <a [routerLink]="['/instant-quote']" type="button" data-dropdown-toggle="language-dropdown-menu"
-        class="inline-flex items-center font-medium justify-center px-4 py-2 text-sm bg-primary-900 text-light-900 rounded-lg cursor-pointer hover:bg-dark-900">
+      <a [routerLink]="['/instant-quote']" type="button"
+        class="inline-flex items-center font-medium justify-center px-4 py-2 md:py-4 text-sm bg-primary-900 text-light-900 rounded-lg cursor-pointer hover:bg-dark-900">
         Get started
       </a>
     </div>
@@ -40,17 +44,16 @@
           </button>
 
           <div [@openClose]="openCloseCustomerMegaMenuTrigger"
-            class="absolute z-50  mt-5 flex w-full md:w-screen max-w-max md:-translate-x-1/2 md:-left-1/2 px-4">
+            class="md:absolute z-50  mt-3 flex w-full md:w-screen max-w-max md:-translate-x-1/2 md:-left-1/2 px-0 lg:px-4">
             <div
-              class="w-screen max-w-md flex-auto overflow-hidden rounded-3xl bg-white text-sm leading-6 shadow-lg ring-1 ring-gray-900/5">
-              <div class="p-4">
-                <div class="group relative flex gap-x-6 rounded-lg p-4 hover:bg-gray-50">
-                  <div
-                    class="mt-1 flex h-11 w-11 flex-none items-center justify-center rounded-lg bg-gray-50 group-hover:bg-white">
+              class="w-screen max-w-md flex-auto overflow-hidden md:rounded-3xl bg-light-900 text-sm leading-6 shadow-lg ring-1 ring-dark-900/5">
+              <div class="p-1 lg:p-4">
+                <div class="group relative flex gap-x-2 lg:gap-x-6 rounded-lg p-2 lg:p-4 hover:bg-primary-100">
+                  <div class="mt-1 flex h-11 w-11 flex-none items-center justify-center rounded-lg ">
                     <img loading="lazy" [src]="'assets/header/about.svg'" alt="about clutter free finds">
                   </div>
                   <div>
-                    <a [routerLink]="'/about'" (click)="toggleCustomerMegaMenu()" class=" font-semibold text-gray-900">
+                    <a [routerLink]="'/about'" (click)="toggleCustomerMegaMenu()" class=" font-semibold text-dark-900">
                       About
                       <span class="absolute inset-0"></span>
                     </a>
@@ -58,14 +61,13 @@
                       Goals and everything you need to know about Clutter Free Finds</p>
                   </div>
                 </div>
-                <div class="group relative flex gap-x-6 rounded-lg p-4 hover:bg-gray-50">
-                  <div
-                    class="mt-1 flex h-11 w-11 flex-none items-center justify-center rounded-lg bg-gray-50 group-hover:bg-white">
+                <div class="group relative flex gap-x-2 lg:gap-x-6 rounded-lg p-2 lg:p-4 hover:bg-primary-100">
+                  <div class="mt-1 flex h-11 w-11 flex-none items-center justify-center rounded-lg ">
                     <img loading="lazy" [src]="'assets/header/how-it-works.svg'" alt="how-it-works clutter free finds">
                   </div>
                   <div>
                     <a [routerLink]="'/how-it-works'" (click)="toggleCustomerMegaMenu()" class=" font-semibold
-                      text-gray-900">
+                      text-dark-900">
                       How it Works
                       <span class="absolute inset-0"></span>
                     </a>
@@ -76,7 +78,7 @@
               </div>
               <div class="flex divide-x divide-dark-100 bg-dark-100">
                 <a href="https://www.youtube.com/watch?v=eZClhYwU7Qc&t=245s" target="_blank"
-                  class="w-3/4 flex items-center justify-start p-2 font-semibold text-dark-900 hover:bg-dark-100 gap-x-2.5">
+                  class="w-3/4 flex items-center justify-start p-2 font-semibold text-dark-900 hover:bg-dark-100 gap-x-2.5 text-xs lg:text-sm">
                   <svg class="w-6 h-6 text-danger-900" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24"
                     height="24" fill="currentColor" viewBox="0 0 24 24">
                     <path fill-rule="evenodd"
@@ -99,18 +101,10 @@
             Store</a>
         </li>
         <li>
-          <a [routerLink]="'/resources'"
-            class="nav-link font-semibold block py-2 px-3 text-dark-900 rounded hover:bg-primary-100 md:hover:bg-transparent md:hover:text-primary-900  md:p-0 ">Resources</a>
-        </li>
-        <li>
-          <a [routerLink]="'/pricing'"
-            class=" nav-link font-semibold block py-2 px-3 text-dark-900 rounded hover:bg-primary-100 md:hover:bg-transparent md:hover:text-primary-900  md:p-0 ">Pricing</a>
-        </li>
-        <li>
           <a [routerLink]="'/blog'"
             class="nav-link font-semibold block py-2 px-3 text-dark-900 rounded hover:bg-primary-100 md:hover:bg-transparent md:hover:text-primary-900  md:p-0 ">Blog</a>
         </li>
       </ul>
     </div>
   </div>
-</nav>
+</header>
