chore: remove dangling code and fix the footer loader

--- a/apps/website/mfe/src/app/pages/about-us/sections/our-vision/our-vision.component.html
+++ b/apps/website/mfe/src/app/pages/about-us/sections/our-vision/our-vision.component.html
@@ -1,5 +1,5 @@
 <div class="relative flex justify-center mb-4 lg:mb-12">
-    <div class="text-hollow bg-gradient-to-r from-primary-900 to-prmary-600 ">Our Vision</div>
+    <div class="text-hollow  text-nowrap bg-gradient-to-r from-primary-900 to-prmary-600 ">Our Vision</div>
     <div class="absolute top-1/2 flex flex-col items-center">
         <div class="text-primary-900  text-center font-medium text-2xl lg:text-5xl">Our Vision</div>
         <img loading="lazy" src="assets/images/vision.png" alt="our organizing vision">
