--- a/libs/shared/header/src/lib/header/header.component.html
+++ b/libs/shared/header/src/lib/header/header.component.html
@@ -27,7 +27,7 @@
       <ul
         class="flex flex-col p-4 md:p-0 mt-4 border border-dark-100 rounded-lg bg-dark-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-light-900">
         <li>
-          <a [routerLink]="'/'"
+          <a [routerLink]="'/'" data-collapse-toggle="mega-menu-full" type="button"
             class="nav-link font-semibold block py-2 px-3 text-dark-900 rounded hover:bg-primary-100 md:hover:bg-transparent md:hover:text-primary-900  md:p-0 "
             aria-current="page">Home</a>
         </li>
@@ -96,12 +96,12 @@
           </div>
         </li>
         <li>
-          <a [routerLink]="'/store'"
+          <a [routerLink]="'/store'" data-collapse-toggle="mega-menu-full"
             class="nav-link font-semibold block py-2 px-3 text-dark-900 rounded hover:bg-primary-100 md:hover:bg-transparent md:hover:text-primary-900  md:p-0 ">
             Store</a>
         </li>
         <li>
-          <a [routerLink]="'/blog'"
+          <a [routerLink]="'/blog'" data-collapse-toggle="mega-menu-full"
             class="nav-link font-semibold block py-2 px-3 text-dark-900 rounded hover:bg-primary-100 md:hover:bg-transparent md:hover:text-primary-900  md:p-0 ">Blog</a>
         </li>
       </ul>
