--- a/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-summary-options/quote-summary.component.html
+++ b/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-summary-options/quote-summary.component.html
@@ -197,7 +197,7 @@
 
                     <div class="gap-4 sm:flex sm:items-center">
                         <button type="button" (click)="onValidateQuote()"
-                            class="w-full rounded-lg  border border-dark-300 bg-white px-5  py-2.5 text-sm font-medium text-dark-900 hover:bg-gray-100 hover:text-primary-700 focus:z-10 focus:outline-none focus:ring-4 focus:ring-gray-100">Validate
+                            class="w-full rounded-lg  border border-dark-300 bg-primary-900 px-5  py-2.5 text-sm font-medium text-light-900 hover:bg-gray-100 hover:text-primary-700 focus:z-10 focus:outline-none focus:ring-4 focus:ring-gray-100">Validate
                             Quote</button>
                     </div>
                 </div>
